# AgentPet

./: .commitmsg.txt  .gitignore  .prbody.txt  README.md  package-lock.json  package.json  pet-overlay.html  settings.html  status-panel.html  vite.config.ts
.cursor/rules/: git-pr-workflow.mdc
docs/: AgentPet_技术方案_v0.2.md
openspec/: ROADMAP.md  config.yaml
openspec/changes/m0-scaffold-tauri-skeleton/: design.md  proposal.md  tasks.md
openspec/changes/m0-scaffold-tauri-skeleton/specs/app-data-paths/: spec.md
openspec/changes/m0-scaffold-tauri-skeleton/specs/app-logging/: spec.md
openspec/changes/m0-scaffold-tauri-skeleton/specs/app-shell/: spec.md
openspec/changes/m0-scaffold-tauri-skeleton/specs/window-event-bus/: spec.md
src/: health.ts  main-pet-overlay.tsx  main-settings.tsx  main-status-panel.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  logging.rs  main.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/config/: paths.rs  settings.rs
src-tauri/src/event_bus/: mod.rs
src-tauri/src/notify/: mod.rs
src-tauri/src/pet/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/store/: mod.rs
src-tauri/src/window/: overlay.rs
src/windows/: PetOverlay.tsx  Settings.tsx  StatusPanel.tsx
