[package]
name = "agentpet"
version = "0.1.0"
description = "AgentPet — cross-agent local attention hub (desktop shell)"
authors = ["AgentPet"]
edition = "2021"

[lib]
# `_lib` suffix keeps the lib name distinct from the bin on Windows.
name = "agentpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
directories = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
anyhow = "1"
